# TimeManager

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.cjs
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-08-18-152919_create_activities/: up.sql
src-tauri/migrations/2023-08-24-213601_add_workitem_id/: down.sql  up.sql
src-tauri/migrations/2023-08-31-194156_create_activity_times/: down.sql  up.sql
src-tauri/src/: azure_devops.rs  commands.rs  config.rs  db.rs  kimai.rs  main.rs  schema.rs  state.rs  tauri_helper.rs  timer.rs
src-tauri/src/activity/: commands.rs  models.rs
src-tauri/src/azure_devops/: api.rs  client.rs  commands.rs  error.rs  models.rs  response_types.rs
src-tauri/src/config/: commands.rs  models.rs  trait_impl.rs
src-tauri/src/db/: activity.rs  models.rs  trait_helper.rs
src-tauri/src/kimai/: api.rs  client.rs  commands.rs  models.rs
src-tauri/src/kimai/models/: activity.rs  customer.rs  project.rs  team.rs  timesheet.rs
src-tauri/src/reqwest_helper/: error.rs  helper.rs
src-tauri/src/state/: commands.rs  models.rs  state.rs  trait_impl.rs
src-tauri/src/tauri_helper/: commands.rs  configure.rs
src-tauri/src/timer/: commands.rs
src/lib/: Greet.svelte  Timer.svelte  state.ts
src/lib/activities/: ActivityHistory.svelte  ActivityHistoryTitle.svelte  ActivitySelector.svelte  ActivityTable.svelte  ActivityTimeHistory.svelte  ActivityTimeTable.svelte  activity.ts
src/lib/azure_devops/: DevopsModal.svelte  devops.ts
src/lib/kimai/: kimai.ts  (+1 more)
src/routes/: +page.svelte
(+4 files in other folders)
