[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "system-tray", "window-start-dragging", "window-close"] }
chrono = "0.4.26"
spin_sleep = "1.1.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
reqwest = { version = "0.11.19", features = ["json"] }
base64 = "0.21.2"
thiserror = "1.0.47"
confy = "0.5.1"
tokio = { version = "1.32.0", features = ["sync"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
